--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(SKELYA_KEM_encrypt)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(SKELYA_KEM_encrypt main.cpp)
+add_executable(SKELYA_KEM_encrypt main.cpp encryption/decrypt/const.h encryption/encrypt/const.h encryption/keyGeneration/const.h)
