encryption implementation, fix bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,6 @@ project(SKELYA_KEM_encrypt)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(SOURCE_FILES encryption/scr/main.cpp encryption/scr/encrypt/constEnc.h)
+set(SOURCE_FILES encryption/scr/main.cpp)
 
 add_executable(SKELYA_KEM_encrypt ${SOURCE_FILES})
-
-#[[
-add_executable(encryption/scr/decrypt/const.h
-        encryption/scr/encrypt/const.h
-        encryption/scr/keyGeneration/const.h
-        encryption/scr/keyGeneration/keyGeneration.cpp
-        encryption/scr/keyGeneration/keyGeneration.h
-        encryption/scr/encrypt/encryption.cpp
-        encryption/scr/encrypt/encryption.h
-        encryption/scr/main.cpp)
-]]
